// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyEditor dropdown matches snapshot 1`] = `
<div
  className="ui segment"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "paddingBottom": "10px",
      }
    }
  >
    <div>
      Field
    </div>
    <i
      aria-hidden="true"
      className="close link icon"
      onClick={[Function]}
      style={
        Object {
          "color": "#5700b5",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "maxWidth": "350px",
      }
    }
  >
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="default text"
        role="alert"
      >
        Select an amendable field...
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Fees payable by
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyEditor empty field matches snapshot 1`] = `
<div
  className="ui segment"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "paddingBottom": "10px",
      }
    }
  >
    <div>
      Field
    </div>
    <i
      aria-hidden="true"
      className="close link icon"
      onClick={[Function]}
      style={
        Object {
          "color": "#5700b5",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "maxWidth": "350px",
      }
    }
  >
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="default text"
        role="alert"
      >
        Select an amendable field...
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Fees payable by
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyEditor field specified makes current field red if there is an error 1`] = `
<div
  className="ui segment"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "paddingBottom": "10px",
      }
    }
  >
    <div>
      Field
    </div>
    <i
      aria-hidden="true"
      className="close link icon"
      onClick={[Function]}
      style={
        Object {
          "color": "#5700b5",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "maxWidth": "350px",
      }
    }
  >
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown field error"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Date of expiry
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Fees payable by
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Available with
          </span>
        </div>
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Date of expiry
          </span>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "paddingTop": "15px",
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": "10px",
            "width": "100%",
          }
        }
      >
        Current
        <div
          className="ui disabled input"
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <input
            disabled={true}
            onChange={[Function]}
            tabIndex={-1}
            type="date"
            value="2020-12-31"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "10px",
            "width": "100%",
          }
        }
      >
        New
        <div
          className="ui input"
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <input
            disabled={false}
            onChange={[Function]}
            type="date"
            value="02-01-1990"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyEditor field specified matches snapshot 1`] = `
<div
  className="ui segment"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "paddingBottom": "10px",
      }
    }
  >
    <div>
      Field
    </div>
    <i
      aria-hidden="true"
      className="close link icon"
      onClick={[Function]}
      style={
        Object {
          "color": "#5700b5",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "maxWidth": "350px",
      }
    }
  >
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Date of expiry
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Fees payable by
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Available with
          </span>
        </div>
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Date of expiry
          </span>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "paddingTop": "15px",
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": "10px",
            "width": "100%",
          }
        }
      >
        Current
        <div
          className="ui disabled input"
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <input
            disabled={true}
            onChange={[Function]}
            tabIndex={-1}
            type="date"
            value="2020-12-31"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "10px",
            "width": "100%",
          }
        }
      >
        New
        <div
          className="ui input"
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <input
            disabled={false}
            onChange={[Function]}
            type="date"
            value="02-01-1990"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyEditor more than one item specified in letterOfCreditAmendments diff matches snapshot 1`] = `
<div
  className="ui segment"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "paddingBottom": "10px",
      }
    }
  >
    <div>
      Field
    </div>
    <i
      aria-hidden="true"
      className="close link icon"
      onClick={[Function]}
      style={
        Object {
          "color": "#5700b5",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "maxWidth": "350px",
      }
    }
  >
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        Available with
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Fees payable by
          </span>
        </div>
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Available with
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Invoice requirement
          </span>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "paddingTop": "15px",
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": "10px",
            "width": "100%",
          }
        }
      >
        Current
        <div
          aria-disabled={true}
          aria-expanded={false}
          className="ui disabled compact selection dropdown"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          style={
            Object {
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Issuing bank
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                Advising bank
              </span>
            </div>
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                Issuing bank
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "10px",
            "width": "100%",
          }
        }
      >
        New
        <div
          aria-disabled={false}
          aria-expanded={false}
          className="ui compact selection dropdown"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          style={
            Object {
              "width": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Advising bank
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={true}
              aria-selected={true}
              className="active selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                Advising bank
              </span>
            </div>
            <div
              aria-checked={false}
              aria-selected={false}
              className="item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                Issuing bank
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
